Remove redundant 'added regularly' from Regular Updates description

--- a/templates/page.features.liquid
+++ b/templates/page.features.liquid
@@ -568,7 +568,7 @@
           </svg>
         </div>
         <h3>Regular Updates</h3>
-        <p>Continuous improvements to indicators, strategies, and new features added regularly</p>
+        <p>Continuous improvements to indicators, strategies, and new features</p>
       </div>
     </div>
 
